# bewise-testing

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  app.py  config.py  database.py
app/alembic/: env.py
app/alembic/versions/: c2c1f1c090fc_initial_migration.py
app/api/v1/: applications.py
app/dependencies/: dependencies.py
app/domain/: models.py  schemas.py
app/protocols/: applications.py  producer.py  storage.py
app/repository/: postgres_repo.py
app/services/: application_service.py  exceptions.py  producer_service.py
app/tests/: conftest.py
app/tests/unit/repository/: conftest.py  test_postgres_repo.py
app/tests/unit/services/: test_application_service.py
scripts/: kafka-init.sh  unicorn.sh
