[tool.poetry]
name="bewisetesting"
version="1.0"
description="BeWise test task"
authors=[]

[tool.poetry.dependencies]
python="^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
uvicorn = "^0.34.0"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.7"

[tool.poetry.group.test.dependencies]
testcontainers = "^4.9.0"
pytest-asyncio = "^0.25.2"
pytest = "^8.3.4"

[tool.ruff]
cache-dir = "~/.cache/ruff"
